nextcloud-deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud
---
apiVersion: v1
kind: Service
metadata:
  name: polling-app-nextcloud
  labels:
    app: polling-app
  namespace: nextcloud
spec:
  selector:
    app: polling-app
  type: ClusterIP
  ports:  
  - name: http
    port: 80
    targetPort: 8888
    protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polling-app-nextcloud
  labels:
    app: polling-app
  namespace: nextcloud
spec:
  selector:
    matchLabels:
      app: polling-app
      tier: nextcloud
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: polling-app
        tier: nextcloud
    spec:
      containers:
      - image: wonderfall/nextcloud
        name: nextcloud
        ports:
        - containerPort: 8888
          name: nextcloud
        volumeMounts:
        - name: nextcloud-persistent-storage
          mountPath: /data
      volumes:
      - name: nextcloud-persistent-storage
        persistentVolumeClaim:
          claimName: nextcloud-pv-claim
